# peasy

./: .gitignore  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.kmake  NEWS  README  README.md  aclocal.m4  autoconf.mk.in  autogen.sh  config.h.in  configure  configure.ac  gen-gir.mk  gen-vala.mk  gen-vapigen.mk  initvars.mk  peasy-0.4.tar.gz.delta  peasy-0.4.tar.gz.id  peasy_0.5-10kugel.orig.tar.gz.delta  peasy_0.5-10kugel.orig.tar.gz.id  process-subdir.mk  subdir.mk
api/: Geany-1.0-custom.vala  Geany-1.0.metadata  Geany.py  Makefile.am  Makefile.in  Makefile.rel.am  geany-1.0.deps.in  geany-1.0.vapi  geany-gtkdoc.h  geany-scintilla-1.0.vapi  geany-scintilla-tmp-1.0.deps.in  geany-scintilla-tmp-1.0.vapi  geany-sciwrappers-gtkdoc.h  get-type.txt  gintptr.vapi  subdir.mk
api/gtkdoc_h/235/: geany-gtkdoc.h
api/gtkdoc_h/239/: geany-gtkdoc.h
api/pyoverrides/: Geany.py
debian/: changelog  control  gbp.conf  pkg.pyinstall  rules
kmake/: README  gen-cat.mk  gen-sed.mk  kmake.mk  process-subdir.mk
kmake/testing/: autogen.sh
kmake/testing/a/: libx.h  subdir.mk
kmake/testing/a/y/: liby.c
kmake/testing/a/z/: subdir.mk
kmake/testing/c/: c.c  cxx.cpp
kmake/testing/d/: d  subdir.mk
kmake/testing/e/: e.c  esh.c
kmake/testing/g/: g1.c.sed
kmake/testing/h/: h1.h
kmake/testing/m/2/: Makefile
kmake/testing/t/: subdir.mk  t2.c
lib/: Makefile.am  Makefile.in  Peasy-0.1.gir  data.c  data.vala  document.c  document.vala  editor.c  editor.vala  filetype.c  filetype.vala  highlighting.c  highlighting.vala  keybindings.vala  keygroup.c  keygroup.vala  keygroup_c.c  libpeasy-0.1.vapi  msgwin.c  msgwin.vala  peasy.h  peasyobject.c  peasyobject.vala  plugin.c  plugin.vala  plugin_c.c  project.vala  subdir.mk  tags.c  tags.vala  utils.vala
m4/: geany.m4  gtk.m4  mingw.m4
plugins/: Makefile.am  Makefile.in  Makefile.rel.am  console-peasy.plugin  console-peasy.plugin.desktop.in  console-peasy.py  doxygen-helper.glade  doxygen-helper.plugin.desktop.in  doxygen-helper.py  goto.glade  goto.py  modeline.plugin  modeline.plugin.desktop.in  modeline.py  peasyluatest.lua  peasyluatest.plugin.desktop.in  peasypytest.plugin  peasypytest.plugin.desktop.in  peasypytest.py  peasytest.c  peasytest.plugin  peasytest.plugin.desktop.in  quickswitch.glade  quickswitch.plugin  quickswitch.plugin.desktop.in  quickswitch.py  subdir.mk
po/: Makevars  POTFILES.in  de.po
src/: Makefile.am  Makefile.in  Makefile.rel.am  peasy-plugin.c  peasy.c  peasypytest.plugin  peasypytest.py  peasytest.c  peasytest.h  peasytest.plugin  subdir.mk
src/peasy/: Makefile.am  Makefile.rel.am  Peasy-0.1.gir  data.c  data.vala  document.c  document.vala  editor.c  editor.vala  filetype.c  filetype.vala  highlighting.c  highlighting.vala  keybindings.vala  keygroup.c  keygroup.vala  keygroup_c.c  peasy-0.1.vapi  peasy.h  peasyobject.c  peasyobject.vala  peasyplugin.vala  plugin.c  plugin.vala  project.vala  utils.c  utils.vala
testing/: .gitignore  Makefile.in  autoconf.mk.in  configure.ac  subdir.mk
testing/a/: a.c  libx.c
testing/a/y/: subdir.mk  x.c
testing/a/y/1/: subdir.mk
testing/b/: subdir.mk
testing/c/: c1.c  cc.cpp  csh.c  cxx1.cpp  subdir.mk
testing/e/: subdir.mk
testing/g/: subdir.mk
testing/h/: h.c  subdir.mk
testing/m/: subdir.mk
testing/m/1/: Makefile
testing/s/: s.c  s.h  s2.c  subdir.mk
